force-app/main/default/objects/Spare_Part__c.object
<CustomObject>
    <fields>
        <fullName>Base_Unit__c</fullName>
        <label>Base Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>SET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>THB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZMRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Spare Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Material_Description__c</columns>
        <columns>Material_Number__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Price__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Number__c</field>
            <operation>equals</operation>
            <value>5813971459</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Spare Part Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>